<resources>
    <string name="app_name">SunnySide</string>
    <string name="we_are">We are a full service agency specializing in helping brands grow so fast. Engage your clients through compelling visuals that do most of the marketing for you.</string>
    <string name="using">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we\'ll build and extend your brain in digital places</string>
    <string name="great">Great design makes you memorable. We deliver artwork that underscores 
    your brand message and captures potential clients\' attention</string>
    <string name="increase">Increase your credibilty by getting the most stunning, high-quality photos that improve
    your business image</string>
    <string name="we_put">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit
    </string>
    <string name="sunnyside">Sunnyside\' enthusiasm coupled with their keen interest in our brans\'
    success made it a satisfying and enjoyable</string>
    <string name="incredible">Incredible end result! our sales increases over 400% when we worked
    with Sunnyside. Highly recommend!</string>
    <string name="stand">Stand out to the right audience</string>
</resources>
