<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="590dp"
                android:src="@drawable/image_header"
                android:id="@+id/image_header"
                />

            <ImageView
                android:id="@+id/image_transform"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_below="@+id/image_header"
                android:layout_marginTop="0dp"
                android:src="@drawable/image_transform" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="436dp"
                android:layout_below="@+id/image_transform"
                android:background="@color/white"
                android:id="@+id/white_space1"/>



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginTop="37dp"
                android:layout_marginLeft="23dp"
                />



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_hamburger"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="37dp"
                android:layout_marginRight="24dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arrow_down"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:layout_below="@+id/we_are_creative"/>

            <TextView
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="151dp"
                android:text="WE ARE CREATIVES"
                android:textSize="50sp"
                android:gravity="center_horizontal"
                android:id="@+id/we_are_creative"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_transform"
                android:layout_marginTop="70dp"
                android:text="Transform your brand"
                android:gravity="center_horizontal"
                android:textSize="32dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/transform_your_brand"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transform_your_brand"
                android:text="@string/we_are"
                android:layout_marginTop="34dp"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:id="@+id/we_are"
                android:layout_marginRight="25dp"
                />



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="314dp"
                android:layout_below="@+id/white_space1"
                android:layout_marginTop="-2dp"
                android:background="@drawable/image_stand_out"
                android:id="@+id/image_stand_out"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="436dp"
                android:layout_below="@+id/image_stand_out"
                android:background="@color/white"
                android:id="@+id/white_space2"/>

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_stand_out"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="62dp"
                android:gravity="center_horizontal"
                android:text="@string/stand"
                android:textColor="@color/dark_blue"
                android:id="@+id/stand"/>

            <TextView
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stand"
                android:text="@string/using"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textColor="@color/dark_blue"
                android:layout_marginTop="35dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="650dp"
                android:src="@drawable/image_graphic_design"
                android:layout_below="@+id/white_space2"
                android:id="@+id/image_graphic_design"/>

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="Graphic Design"
                android:layout_below="@id/white_space2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="404dp"
                android:gravity="center_horizontal"
                android:id="@+id/graphic_design"
                />

            <TextView
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:text="@string/great"
                android:layout_below="@id/graphic_design"
                android:layout_marginTop="35dp"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="650dp"
                android:src="@drawable/image_photography"
                android:layout_below="@+id/image_graphic_design"
                android:id="@+id/image_photography"/>

            <TextView
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:text="Photography"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_below="@id/image_graphic_design"
                android:layout_marginTop="397dp"
                android:id="@+id/photography"/>

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:text="@string/increase"
                android:layout_below="@id/photography"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1257dp"
                android:background="@color/white"
                android:id="@+id/white_space3"
                android:layout_below="@id/image_photography"/>

            <TextView
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/image_photography"
                android:gravity="center_horizontal"
                android:text="CLIENT TESTIMONIALS"
                android:layout_marginTop="62dp"
                android:id="@+id/client"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_emily"
                android:layout_below="@+id/client"
                android:layout_centerHorizontal="true"
                android:id="@+id/emily"
                android:layout_marginTop="63dp"
                />

            <TextView
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:text="@string/we_put"
                android:layout_below="@+id/emily"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:id="@+id/we_put"/>

            <TextView
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/we_put"
                android:gravity="center_horizontal"
                android:text="Emily R."
                android:id="@+id/emily_r"
                android:layout_marginTop="43dp"/>

            <TextView
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:text="Marketing Director"
                android:layout_below="@+id/emily_r"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="17dp"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/white_space3"
                android:id="@+id/linear1">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/image_gallery_milkbottles"
                    android:id="@+id/image_gallery_milkbottles"

                    />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/image_gallery_orange"
                    android:id="@+id/image_gallery_orange"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear2"
                android:layout_below="@+id/linear1">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/image_gallery_cone"
                    android:id="@+id/image_gallery_cone"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/image_gallery_sugar_cubes"
                    android:id="@+id/image_gallery_sugar_cubes"
                    />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </RelativeLayout>





        </RelativeLayout>

    </ScrollView>

</RelativeLayout>